@@ -112,8 +112,9 @@ class Smarty_Internal_Compile_Private_ForeachSection extends Smarty_Internal_Com
     public function buildPropertyPreg($named, $attributes)
     {
         if ($named) {
-            $this->resultOffsets[ 'named' ] = $this->startOffset + 3;
-            $this->propertyPreg .= "([\$]smarty[.]{$this->tagName}[.]{$attributes['name']}[.](";
+            $this->resultOffsets[ 'named' ] = $this->startOffset + 4;
+            $this->propertyPreg .= "(([\$]smarty[.]{$this->tagName}[.]" . ($this->tagName === 'section' ? "|[\[]\s*" : '')
+                                   . "){$attributes['name']}[.](";
             $properties = $this->nameProperties;
         } else {
             $this->resultOffsets[ 'item' ] = $this->startOffset + 3;
